se sube img nueva

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="row">
                 <div class="title col-5">
                     <h4 class="mayoreo">productos disponibles <span> por mayor</span></h4>
-                <img class="box" src="https://cdn.icon-icons.com/icons2/943/PNG/512/shoppaymentorderbuy-10_icon-icons.com_73874.png" alt="">
+                <img class="box" src="./box2.png" alt="">
                 </div>
                 <div class="encargo col-7">
                     <table>
