--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mundo digital</title>
-    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./bootstrap-5.2.0-dist/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
 </head>
 
 <body>
     <header class="principal">
         <div class="encabezado row">
             <div class="logo col">
-                <img src="./2.png" alt="">
+                <img src="./imagnes/2.png" alt="">
             </div>
             <nav>
                 <div class="navega col">
