--- a/paginas/about.html
+++ b/paginas/about.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../bootstrap-5.2.0-dist/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
     <header class="principal">
         <div class="encabezado row">
             <div class="logo col">
-                <img src="../2.png" alt="">
+                <img src="../imagnes/2.png" alt="">
             </div>
             <nav>
                 <div class="navega col">
