--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <section>
             <h3 class="animate__animated animate__jackInTheBox animate__repeat-3">trabajamos con las <span>mejores
                 empresas del rubro</span></h3>
-            <div class="multimedia row">
+            <div class="multimedia row d-flex justify-content-center">
                 <div class="video1 col-4"><iframe width="460" height="315" src="https://www.youtube.com/embed/MKTlI9_N_-s"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -99,10 +99,10 @@
             </div>
         </section>
         <article>
-            <div class="row">
+            <div class="row d-flex justify-content-center align-content-center">
                 <div class="title col-5">
                     <h4 class="mayoreo">productos disponibles <span> por mayor</span></h4>
-                <img class="box" src="./box2.png" alt="">
+                <img class="box" src="./imagnes/box2.png" alt="">
                 </div>
                 <div class="encargo col-7">
                     <table>
