--- a/paginas/login.html
+++ b/paginas/login.html
@@ -79,7 +79,7 @@
             </div>
         </section>
         <section>
-            <div class="row ">
+            <div class="row d-flex justify-content-center ">
                 <div class="clientes">
                     <h4>
                     valoraciones de clientes
