se arregla errores y agrega efectos

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="publicidades ">
                 <ul class="publi">
                     <li id="banner1"><img src="./imagnes/01.png" alt=""></li>
-                    <li id="banner2"><img src="./imagnes/02.png" alt=""></li>
+                    <li id="banner2">  <img src="./imagnes/03.jpg" alt=""></li>
                     <li id="banner3"><img src="./imagnes/baner.png" alt=""></li>
                 </ul>
                 <ul class="direcional">
