--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -125,11 +125,19 @@
                
                 
             </div>
+            <div class="ubicacion ">
+                <div class="texs">
+                    <h1> nos encontramos en.</h1>
+                </div>
+                <div class="gps">
+                    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.039419073536!2d-58.39465471576168!3d-34.603164711795976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac11770b585%3A0x91c39c261e94e76e!2sLavalle%201672%2C%20C1048%20AAN%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1662602828039!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
         <address>
-            <p class="end">COPYRIGTH | 2022, direccion: buenos aires, c.a.b.a-lavalle 1672</p>
+            <p class="end">COPYRIGTH | 2022, direccion: buenos aires, c.a.b.a-lavalle 1672. telefono: 11-111111, email: md@distribuidora.com</p>
         </address>
     </footer>
     <script src="../bootstrap-5.2.0-dist/js/bootstrap.min.js"></script>
